--- a/1.Course Introduce and Directory.md
+++ b/1.Course Introduce and Directory.md
@@ -1,14 +1,14 @@
 # 【全英】Big data for intelligence medical 智慧醫療大數據
 
-## 1:  Topic: Course Introduce and Directory
+## 1:  Topic : Course Introduce and Directory
 
-## [Classroom Requirements and Course Orientation and Assessment Criteria and Course Progress Plans](1.Assessment Criteria and Classroom Regulations and Course Progress Plans .pptx)
-
-## Classroom Requirements and Course Orientation and Assessment Criteria and Course Progress Plans
+## Course-Requirements_Orientation_Progress-Plans_and_Assessment- Criteria
 
 Second semester of the 113 Big data for intelligence medical
 
 Teacher: chih-cheng Wu
+
+[Course-Requirements_Orientation_Progress-Plans_and_Assessment- Criteria](1.Course-Requirements_Orientation_Progress-Plans_and_Assessment- Criteria.pptx)
 
 ---
 
