--- a/1.Course Introduce and Directory.md
+++ b/1.Course Introduce and Directory.md
@@ -8,9 +8,8 @@ Second semester of the 113 Big data for intelligence medical
 
 Teacher: chih-cheng Wu
 
-[Course-Outline](1.Course-Requirements_Orientation_Progress-Plans_and_Assessment-Criteria.pptx)
+PPT  [Course-Outline](Attachment/1.Course-Requirements_Orientation_Progress-Plans_and_Assessment-Criteria.pptx)
 
-[Course-Requirements_Orientation_Progress-Plans_and_Assessment-Criteria](1.Course-Requirements_Orientation_Progress-Plans_and_Assessment- Criteria.pptx)
 
 ---
 
