--- a/1.Course Introduce and Directory.md
+++ b/1.Course Introduce and Directory.md
@@ -1,6 +1,6 @@
 # 【全英】Big data for intelligence medical 智慧醫療大數據
 
-## 1:  Topic : Course Introduce and Directory
+## 1:Topic : Course Introduce and Directory
 
 ## Course-Requirements_Orientation_Progress-Plans_and_Assessment- Criteria
 
@@ -13,10 +13,11 @@ PPT  [Course-Outline](Attachment/1.Course-Requirements_Orientation_Progress-Plan
 
 ---
 
-## Slide 2
+## Week 1
 
-Big data for intelligence medical
-Semester Assessment Criteria
+Introduction to Big Data Analytics and Python Environment
+
+PPT   [Concept of Big Data Analysis](2.Concept of Big data Analysis.pptx)
 
 ---
 
