--- a/1.Course Introduce and Directory.md
+++ b/1.Course Introduce and Directory.md
@@ -17,7 +17,7 @@ PPT  [Course-Outline](Attachment/1.Course-Requirements_Orientation_Progress-Plan
 
 Introduction to Big Data Analytics and Python Environment
 
-PPT   [Concept of Big Data Analysis](2.Concept of Big data Analysis.pptx)
+PPT   [Concept_of_Big_Data_Analysis](2.Concept_of_Big_Data_Analysis.pptx)
 
 ---
 
