--- a/1.Course Introduce and Directory.md
+++ b/1.Course Introduce and Directory.md
@@ -10,52 +10,52 @@ Teacher: chih-cheng Wu
 
 PPT  [Course-Outline](Attachment/1.Course-Requirements_Orientation_Progress-Plans_and_Assessment-Criteria.pptx)
 
-
 ---
 
 ## Week 1
 
-Introduction to Big Data Analytics and Python Environment
+### Introduction to Big Data Analytics and Python Environment
 
 PPT   [Concept_of_Big_Data_Analysis](2.Concept_of_Big_Data_Analysis.pptx)
 
 ---
 
-## Slide 3
+## Week 2
 
-Big data for intelligence medical
-Course Progress Plans
+### Data Acquisition and Data Understanding with Pandas
 
-1~8 week【Model-1】
-Explaining Big Data Analysis
-Procedure、Algorithm overview、 Interpret the results 
-Introduce & Explain & Present Kaggle example project
-9th week Presentation
-
-9~11 week【Model-2】
-Example python syntax and skill to achieve
-12th week assignment
-
-12~18 week【Model-3】
-Give some talks
-18 week paper report
+PPT   [DataAcquisition](Week2_Data-Acquisition.md)
 
 ---
 
-## Slide 4: 1~8 week【Model-1】
+## Week 3
 
-1~8 week【Model-1】
+### Data Cleaning and Data Preprocessing Techniques
 
----
-
-## Slide 5: 9~11 week【Model-2】
-
-9~11 week【Model-2】
+PPT   [DataPreprocessing](Week3_Data-Preprocessing.md)
 
 ---
 
-## Slide 6: 12~18 week【Model-3】
+## Week 9
 
-12~18 week【Model-3】
+### Python GUI Programming with Tkinter
+
+PPT   [Learning_From_Kaggle_Project](Week-9_Model1-Kaggle-Present-project.pptx)
+
+---
+
+## Week 10
+
+### Database Design and SQLite Integration in
+
+PPT   [Quartile_and_Outlier](Week-10_.Quartile-and-Data-Proprocessing.ppt)
+
+---
+
+## Week 11
+
+### CRUD Application Development and Data
+
+PPT   [Common_Use_SQL_Statement](Week-11_CommonUseSQLStatement_UsingStandardMSSQL.ppt)
 
 ---
