--- a/1.Course Introduce and Directory.md
+++ b/1.Course Introduce and Directory.md
@@ -1,61 +1,113 @@
 # 【全英】Big data for intelligence medical 智慧醫療大數據
 
-## 1:Topic : Course Introduce and Directory
+## Course: Course Introduce and Directory
 
-## Course-Requirements_Orientation_Progress-Plans_and_Assessment- Criteria
+**Semester:** Second semester of the 113 Big data for intelligence medical
+**Instructor:** Chih-Cheng Wu
 
-Second semester of the 113 Big data for intelligence medical
-
-Teacher: chih-cheng Wu
-
-PPT  [Course-Outline](Attachment/1.Course-Requirements_Orientation_Progress-Plans_and_Assessment-Criteria.pptx)
+**Primary file:** [Course-Outline PPT](Attachment/1.Course-Requirements_Orientation_Progress-Plans_and_Assessment-Criteria.pptx)
 
 ---
 
-## Week 1
+## Table of Contents
 
-### Introduction to Big Data Analytics and Python Environment
-
-PPT   [Concept_of_Big_Data_Analysis](2.Concept_of_Big_Data_Analysis.pptx)
-
----
-
-## Week 2
-
-### Data Acquisition and Data Understanding with Pandas
-
-PPT   [DataAcquisition](Week2_Data-Acquisition.md)
-
----
-
-## Week 3
-
-### Data Cleaning and Data Preprocessing Techniques
-
-PPT   [DataPreprocessing](Week3_Data-Preprocessing.md)
+- [【全英】Big data for intelligence medical 智慧醫療大數據](#全英big-data-for-intelligence-medical-智慧醫療大數據)
+  - [Course: Course Introduce and Directory](#course-course-introduce-and-directory)
+  - [Table of Contents](#table-of-contents)
+  - [Learning objectives](#learning-objectives)
+  - [Assessment \& grading](#assessment--grading)
+  - [How to use these materials](#how-to-use-these-materials)
+    - [Week 1 — Introduction to Big Data Analytics and Python Environment](#week-1--introduction-to-big-data-analytics-and-python-environment)
+    - [Week 2 — Data Acquisition and Data Understanding with Pandas](#week-2--data-acquisition-and-data-understanding-with-pandas)
+    - [Week 3 — Data Cleaning and Data Preprocessing Techniques](#week-3--data-cleaning-and-data-preprocessing-techniques)
+    - [Week 9 — Python GUI Programming with Tkinter](#week-9--python-gui-programming-with-tkinter)
+    - [Week 10 — Database Design and SQLite Integration](#week-10--database-design-and-sqlite-integration)
+    - [Week 11 — CRUD Application Development](#week-11--crud-application-development)
 
 ---
 
-## Week 9
+## Learning objectives
 
-### Python GUI Programming with Tkinter
+- Understand core concepts of big data and their applications in healthcare
+- Set up and use Python and key libraries for data ingestion and analysis (e.g., Pandas, NumPy, Matplotlib)
+- Acquire, clean, and preprocess real-world health datasets for downstream analysis
+- Build simple GUI tools with Tkinter and integrate data storage using SQLite
+- Complete a project demonstrating end-to-end data handling and presentation
 
-PPT   [Learning_From_Kaggle_Project](Week-9_Model1-Kaggle-Present-project.pptx)
+## Assessment & grading
+
+Assessment will include assignments, project work, quizzes, and participation. For detailed criteria and rubrics, refer to the Course-Outline PPT linked above.
+
+## How to use these materials
+
+- Lecture notes and exercises are organized by week; slides are linked in each section.
+- Use files in `Attachment/` for slides and `scripts/`
+- `1.Course Introduce and Directory_beautified.md `(This File) — course landing page and quick links
 
 ---
 
-## Week 10
+### Week 1 — Introduction to Big Data Analytics and Python Environment
 
-### Database Design and SQLite Integration in
+**Topic:** Introduction to Big Data Analytics and Python Environment
+**Summary:** Overview of big data concepts and Python environment setup (installation, virtual environments, and core libraries).
 
-PPT   [Quartile_and_Outlier](Week-10_.Quartile-and-Data-Proprocessing.ppt)
+**Materials:**
+
+- [Concept_of_Big_Data_Analysis (PPTX)](2.Concept_of_Big_Data_Analysis.pptx)
 
 ---
 
-## Week 11
+### Week 2 — Data Acquisition and Data Understanding with Pandas
 
-### CRUD Application Development and Data
+**Topic:** Data Acquisition and Exploratory Data Analysis with Pandas
+**Summary:** Techniques for loading data, inspecting structure, handling missing values, and conducting initial EDA.
 
-PPT   [Common_Use_SQL_Statement](Week-11_CommonUseSQLStatement_UsingStandardMSSQL.ppt)
+**Materials:**
+
+- [DataAcquisition (Markdown)](Week2_Data-Acquisition.md)
+
+---
+
+### Week 3 — Data Cleaning and Data Preprocessing Techniques
+
+**Topic:** Data Cleaning and Feature Preprocessing
+**Summary:** Methods for handling missing or inconsistent data, normalization/scaling, and preparing features for analysis or modeling.
+
+**Materials:**
+
+- [DataPreprocessing (Markdown)](Week3_Data-Preprocessing.md)
+
+---
+
+### Week 9 — Python GUI Programming with Tkinter
+
+**Topic:** Python GUI Programming with Tkinter
+**Summary:** Building simple desktop interfaces to interact with data and visualize results; integrating buttons, inputs, and basic plotting.
+
+**Materials:**
+
+- [Learning From Kaggle Project (PPTX)](Week-9_Model1-Kaggle-Present-project.pptx)
+
+---
+
+### Week 10 — Database Design and SQLite Integration
+
+**Topic:** Database Design and SQLite Integration
+**Summary:** Fundamentals of relational database design and using SQLite for lightweight storage and CRUD operations.
+
+**Materials:**
+
+- [Quartile and Outlier (PPT)](Week-10_.Quartile-and-Data-Proprocessing.ppt)
+
+---
+
+### Week 11 — CRUD Application Development
+
+**Topic:** CRUD Application Development and Data Handling
+**Summary:** Implementing create/read/update/delete functionality and integrating SQL queries into applications.
+
+**Materials:**
+
+- [Common Use SQL Statement (PPT)](Week-11_CommonUseSQLStatement_UsingStandardMSSQL.ppt)
 
 ---
